force-app/main/default/objects/Missing_Information__c/Missing_Information__c.object-meta.xml
<CustomObject>
    <description>Tracks specific pieces of information needed from patients during enrollment or case resolution. Each record represents one item that needs to be collected, acting as a to-do list for information collection.</description>
    <label>Missing Information</label>
    <nameField>
        <displayFormat>MI-{0000}</displayFormat>
        <label>Missing Information Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Missing Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>