force-app/main/default/objects/Missing_Information__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links this missing information item to a support Case record.</description>
    <inlineHelpText>The support case this missing information is related to.</inlineHelpText>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Missing Information</relationshipLabel>
    <relationshipName>Missing_Information</relationshipName>
    <type>Lookup</type>
</CustomField>