force-app/main/default/objects/Missing_Information__c/fields/Information_Type__c.field-meta.xml
<CustomField>
    <fullName>Information_Type__c</fullName>
    <description>The type of information that is missing or needed from the patient.</description>
    <inlineHelpText>Select the type of document or information needed from the patient.</inlineHelpText>
    <label>Information Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insurance Card</fullName>
            </value>
            <value>
                <fullName>Member ID</fullName>
            </value>
            <value>
                <fullName>Income Verification</fullName>
            </value>
            <value>
                <fullName>Date of Birth</fullName>
            </value>
            <value>
                <fullName>Prescription</fullName>
            </value>
            <value>
                <fullName>Consent Form</fullName>
            </value>
            <value>
                <fullName>ID Document</fullName>
            </value>
            <value>
                <fullName>Address Verification</fullName>
            </value>
            <value>
                <fullName>Contact Information</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>