force-app/main/default/objects/Missing_Information__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Additional context or notes about this missing information item.</description>
    <inlineHelpText>Add any additional details about what is needed or special instructions.</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>