force-app/main/default/objects/Missing_Information__c/fields/Program_Candidate__c.field-meta.xml
<CustomField>
    <fullName>Program_Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links this missing information item to a Program Candidate enrollment record.</description>
    <inlineHelpText>The enrollment record this missing information is related to.</inlineHelpText>
    <label>Program Candidate</label>
    <referenceTo>Program_Candidate__c</referenceTo>
    <relationshipLabel>Missing Information</relationshipLabel>
    <relationshipName>Missing_Information</relationshipName>
    <type>Lookup</type>
</CustomField>