force-app/main/default/objects/Missing_Information__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Information_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Program_Candidate__c</columns>
    <columns>Case__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>