force-app/main/default/objects/Missing_Information__c/listViews/Received_Items.listView-meta.xml
<ListView>
    <fullName>Received_Items</fullName>
    <columns>NAME</columns>
    <columns>Information_Type__c</columns>
    <columns>Program_Candidate__c</columns>
    <columns>Case__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Received</value>
    </filters>
    <label>Received Items</label>
</ListView>